add redhat anaconda installer

--- a/projects.yaml
+++ b/projects.yaml
@@ -736,6 +736,11 @@ projects:
     repo_url: https://code.launchpad.net/ubiquity
     desc: The default installer for Ubuntu and its derivatives, designed to be run from Live CD or USB.
     tags: ["dev", "gtk", "qt"]
+  - name: RedHat Anaconda
+    repo_url: https://github.com/rhinstaller/anaconda
+    docs_url: https://anaconda-installer.readthedocs.io/en/latest/
+    desc: Installation program used by Fedora, Red Hat Enterprise Linux, and other Linux distributions.
+    tags: ["dev", "gtk"]
   - name: Voltron
     repo_url: https://github.com/snare/voltron
     desc: Extensible debugger wrapper aiming to improve the user experience of various debuggers, such as [LLDB](https://lldb.llvm.org/), [GDB](https://en.wikipedia.org/wiki/GNU_Debugger), and [WinDbg](https://en.wikipedia.org/wiki/WinDbg).
