--- a/projects.yaml
+++ b/projects.yaml
@@ -107,68 +107,70 @@ projects:
     repo_url: https://github.com/metabrainz/picard
     wp_url: https://en.wikipedia.org/wiki/MusicBrainz_Picard
     desc: Automatically identify, tag, and organize music albums and other digital audio recordings.
-    tags: ["audio", "qt"]
+    tags: ["audio", "qt", "linux", "windows", "mac"]
   - name: Exaile
     repo_url: https://github.com/exaile/exaile
     wp_url: https://en.wikipedia.org/wiki/Exaile
-    tags: ["audio", "gtk"]
+    tags: ["audio", "gtk", "linux", "windows", "mac"]
     desc: Cross-platform audio player, tag editor, and library organizer.
   - name: Quod Libet
     repo_url: https://github.com/quodlibet/quodlibet
     wp_url: https://en.wikipedia.org/wiki/Quod_Libet_(software)
-    tags: ["audio", "gtk"]
+    tags: ["audio", "gtk", "linux", "windows", "mac"]
     desc: Cross-platform audio player, tag editor, and library organizer.
   - name: Frescobaldi
     repo_url: https://github.com/wbsoft/frescobaldi
     wp_url: https://en.wikipedia.org/wiki/Frescobaldi_(software)
-    tags: ["audio", "qt"]
     desc: An editor for [LilyPond](https://en.wikipedia.org/wiki/LilyPond) music files.
+    tags: ["audio", "qt", "linux", "windows", "mac"]
   - name: SoundConverter
     desc: A GNOME-based audio file transcoder.
     repo_url: https://github.com/kassoulet/soundconverter
     wp_url: https://en.wikipedia.org/wiki/GNOME_SoundConverter
-    tags: ["audio", "gtk"]
+    tags: ["audio", "gtk", "linux"]
   - name: PuddleTag
     repo_url: https://github.com/keithgg/puddletag/
     wp_url: https://en.wikipedia.org/wiki/Puddletag
-    tags: ["audio", "qt4"]
     desc: An audio tag (metadata) editor for audio file formats.
+    tags: ["audio", "qt4", "linux"]
   - name: GNU Radio
     repo_url: https://github.com/gnuradio/gnuradio  # hybrid-cpp
     wp_url: https://en.wikipedia.org/wiki/GNU_Radio
-    tags: ["audio", "qt"]
+    home_url: https://www.gnuradio.org/
     desc: Software development toolkit that provides signal processing blocks to implement software-defined radios and signal-processing systems.
+    tags: ["audio", "cpp", "qt", "linux", "windows", "mac"]
   - name: GNU Solfege
     repo_url: http://git.savannah.gnu.org/cgit/solfege.git
     wp_url: https://en.wikipedia.org/wiki/GNU_Solfege  # ear training, non-github
-    tags: ["audio", "gtk"]
+    tags: ["audio", "gtk", "linux", "windows", "mac"]
     desc: An ear-training program intended to help musicians improve their skills.
   - name: Friture
     home_url: http://friture.org/
     repo_url: https://github.com/tlecomte/friture
     desc: Visualizes and analyzes live audio data in real-time, including scope, spectrum analyzer, rolling 2D spectrogram, and more.
-    tags: ["audio", "qt5"]
+    tags: ["audio", "qt5", "linux", "windows", "mac"]
 
 ## Video
   - name: Pitivi
     repo_url: https://gitlab.gnome.org/GNOME/pitivi
     wp_url: https://en.wikipedia.org/wiki/Pitivi
-    tags: ["video", "gtk"]
+    tags: ["video", "gtk", "linux"]
     desc: Non-linear video editor for Linux, based on GStreamer.
   - name: Plumi
     repo_url: https://github.com/plumi/plumi.app
     wp_url: https://en.wikipedia.org/wiki/Plumi
     desc: Video sharing content management system based on [Plone](https://en.wikipedia.org/wiki/Plone_(software)).
-    tags: ["video", "cms", "plone"]
+    tags: ["video", "cms", "plone", "linux", "mac"]
   - name: Flowblade
     repo_url: https://github.com/jliljebl/flowblade
     wp_url: https://en.wikipedia.org/wiki/Flowblade
-    tags: ["video", "gtk"]
+    tags: ["video", "gtk", "linux"]
     desc: Multitrack, non-linear video editing software for Linux.
   - name: OpenShot
     repo_url: https://github.com/OpenShot/openshot-qt
+    home_url: https://www.openshot.org/
     wp_url: https://en.wikipedia.org/wiki/OpenShot
-    tags: ["video", "qt5"]
+    tags: ["video", "qt5", "linux", "windows", "mac"]
     desc: A cross-platform video editor for FreeBSD, Linux, macOS, and Windows.
 
 ## Graphics
